mega-commit: add other files

--- a/Areas/Identity/Pages/Account/Profile/_NavPages.cshtml
+++ b/Areas/Identity/Pages/Account/Profile/_NavPages.cshtml
@@ -1,8 +1,8 @@
 <ul class="nav justify-content-end">
     <li class="nav-item">
-        <a class="nav-link active" asp-area="Identity" asp-page="/Account/Profile/EditResume">Редактировать</a>
+        <a class="nav-link active" asp-area="Identity" asp-page="/Account/Profile/Edit">Редактировать</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link active" asp-area="Identity" asp-page="/Account/Profile/Edit">Настройки</a>
+        <a class="nav-link active" asp-area="Identity" asp-page="/Account/Manage/Index">Настройки</a>
     </li>
 </ul>
