--- a/wwwroot/css/shared/layout.css
+++ b/wwwroot/css/shared/layout.css
@@ -1,5 +1,15 @@
 .colored-header {
-    background-color: #0b5ed7;
+    background-color: 	#6366F1;
+    transition: transform 0.3s ease;
     padding-top: 5px;
     margin-bottom: 5px;
 }
+
+/*
+.header-content {
+    display: flex;
+}
+
+.colored-header.hidden {
+    transform: translateY(-100%);
+}*/
