--- a/Areas/Identity/Pages/Account/Profile/Edit.cshtml
+++ b/Areas/Identity/Pages/Account/Profile/Edit.cshtml
@@ -1,50 +1,67 @@
 @page
-@model Aeon_Web.Areas.Identity.Pages.Account.Profile.Edit
+@model Aeon_Web.Areas.Identity.Pages.Account.Profile.EditModel
 
 @{
-    ViewData["Title"] = "Edit Resume";
+    var isEdit = Model.IsEdit;
+
+    ViewData["Title"] = isEdit ? "Редактирование резюме" : "Создание резюме";
 }
 
-<h1>Edit Resume</h1>
+<link rel="stylesheet" href="~/css/areas/identity/account/profile/edit.css"/>
+<link rel="stylesheet" href="~/css/margin.css"/>
 
-<form method="post">
-    <div>
-        <label asp-for="Resume.FullName"></label>
-        <input asp-for="Resume.FullName" class="form-control" />
-    </div>
+<div class="mlr-5">
+    <partial name="_StatusMessage" for="StatusMessage"/>
+    <h2>Edit Resume</h2>
 
-    <div>
-        <label asp-for="Resume.Title"></label>
-        <input asp-for="Resume.Title" class="form-control" />
-    </div>
+    <form method="post">
+        <div>
+            <label asp-for="Resume.FullName">Полное имя</label>
+            <input asp-for="Resume.FullName" class="form-control"/>
+        </div>
 
-    <div>
-        <label asp-for="Resume.Summary"></label>
-        <textarea asp-for="Resume.Summary" class="form-control"></textarea>
-    </div>
+        <div>
+            <label asp-for="Resume.Title">Заголовок</label>
+            <input asp-for="Resume.Title" class="form-control"/>
+        </div>
 
-    <h3>Contact Info</h3>
-    <div>
-        <label asp-for="Resume.Contact.Email"></label>
-        <input asp-for="Resume.Contact.Email" class="form-control" />
-    </div>
-    <div>
-        <label asp-for="Resume.Contact.Phone"></label>
-        <input asp-for="Resume.Contact.Phone" class="form-control" />
-    </div>
-    <div>
-        <label asp-for="Resume.Contact.Website"></label>
-        <input asp-for="Resume.Contact.Website" class="form-control" />
-    </div>
+        <div>
+            <label asp-for="Resume.Summary"></label>
+            <textarea asp-for="Resume.Summary" class="form-control"></textarea>
+        </div>
 
-    <h3>Skills</h3>
-    <div>
-        @*@for (int i = 0; i < Model.Resume.Skills.Count; i++)
-        {
-            <input asp-for="Resume.Skills[i]" class="form-control mb-1" />
-        }*@
-        <input asp-for="Skills" class="form-control mb-1" />
-    </div>
+        <h3>Контактная информация</h3>
+        <div>
+            <label asp-for="Resume.Contact.Email">Email</label>
+            <input asp-for="Resume.Contact.Email" type="email" class="form-control"/>
+        </div>
+        <div>
+            <label asp-for="Resume.Contact.Phone">Телефон</label>
+            <input asp-for="Resume.Contact.Phone" type="number" class="form-control"/>
+        </div>
+        <div>
+            <label asp-for="Resume.Contact.Website">Сайт</label>
+            <input asp-for="Resume.Contact.Website" class="form-control"/>
+        </div>
 
-    <button type="submit" class="btn btn-primary mt-3">Save</button>
-</form>
+        <div class="mt-3">
+            <h5><label asp-for="Skills">Навыки</label></h5>
+            <h6>(через запятую)</h6>
+            <input asp-for="Skills" class="form-control mb-1"/>
+        </div>
+
+        <div class="button-container">
+            <button type="submit" class="btn btn-primary mt-3">Сохранить</button>
+            <button class="btn btn-primary mt-3 cancel" onclick="history.back()">Отмена</button>
+        </div>
+    </form>
+
+    @if (Model.IsEdit)
+    {
+        <form method="post" asp-page-handler="Delete"
+              onsubmit="return confirm('Вы уверены, что хотите удалить резюме?');"
+              class="mt-3">
+            <button type="submit" class="btn btn-danger">Удалить резюме</button>
+        </form>
+    }
+</div>
