--- a/Areas/Identity/Pages/Account/Profile/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Profile/Index.cshtml
@@ -6,14 +6,52 @@
 }
 
 <link rel="stylesheet" href="~/css/areas/identity/account/profile/profile-actions.css"/>
+<link rel="stylesheet" href="~/css/areas/identity/account/profile/index.css"/>
 <link rel="stylesheet" href="~/css/common.css"/>
 <link rel="stylesheet" href="~/css/text.css"/>
 <link rel="stylesheet" href="~/css/margin.css"/>
 <link rel="stylesheet" href="~/css/sizing.css"/>
 <div>
-    <partial name="_NavPages"/>
+    @*<partial name="_NavPages"/>*@
+    <partial name="_StatusMessage" for="StatusMessage"/>
+    <ul class="nav justify-content-end">
+        @if (Model.Resume is null)
+        {
+            <li class="nav-item">
+                <a class="nav-link active" asp-area="Identity" asp-page="/Account/Profile/Edit">Создать резюме</a>
+            </li>
+        }
+        else
+        {
+            <li class="nav-item">
+                <a class="nav-link active" asp-area="Identity" asp-route-id="@Model.Resume.Id" asp-page="/Account/Profile/Edit">Редактировать</a>
+            </li>
+        }
+        <li class="nav-item">
+            <a class="nav-link active" asp-area="Identity" asp-page="/Account/Manage/Index">Настройки</a>
+        </li>
+    </ul>
     <table class="mt-1 center-block">
-        @if (Model.Resume is not null)
+        @if (Model.Resume is null)
+        {
+            <table class="center-block mt-5">
+                <td class="w-50">
+                    <div class="circle-base like-circle me-2">
+                        <a class="circle-text like-circle-text m-auto">
+                            ИЗБРАННОЕ
+                        </a>
+                    </div>
+                </td>
+                <td class="w-50">
+                    <div class="circle-base proj-circle ms-3">
+                        <a class="circle-text proj-circle-text m-auto" asp-area="Identity" asp-page="/Account/Profile/Project/Index">
+                            PROJECTS
+                        </a>
+                    </div>
+                </td>
+            </table>   
+        }
+        else
         {
             <td class="w-50">
                 <div class="desc me-5 mb-4">
@@ -36,12 +74,12 @@
                             </a>
                         </div>
                     </td>
-                </table>
+                </table>    
             </td>
             <td class="w-50">
                 <div class="details-container center-block ms-5">
                     <div class="m-tl-50-20">
-                        <p class="light-text fw-bold">Details</p>
+                        <p class="light-text fw-bold">Details:</p>
                         <div class="mt-2">
                             <div class="light-text fw-bold">Роль</div>
                             <div class="light-text">@Model.Resume.Title</div>
@@ -50,7 +88,7 @@
                             <div class="light-text fw-bold">Имя</div>
                             <div class="light-text">@Model.Resume.FullName</div>
                         </div>
-                        <p class="light-text fw-bold mt-3">Contacts</p>
+                        <p class="light-text fw-bold mt-3">Contacts:</p>
                         <div class="mt-3">
                             <div class="light-text fw-bold">Email</div>
                             <div class="light-text">@Model.Resume.Contact.Email</div>
@@ -63,18 +101,16 @@
                             <div class="light-text fw-bold">Website</div>
                             <div class="light-text">@Model.Resume.Contact.Website</div>
                         </div>
-                        <p class="mt-3">Skills</p>
+                        <div class="mt-3">
+                            <div class="light-text fw-bold">Skills</div>
+                            @foreach (var skill in Model.Skills.Take(5))
+                            {
+                                <span class="skill">@skill</span>
+                            }
+                        </div>
                     </div>
                 </div>
             </td>
-        }
-        else
-        {
-            <div>
-                <a>
-                    Создать резюме
-                </a>
-            </div>
         }
     </table>
 </div>
