--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+﻿@using Aeon_Web.Models.Entities
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <link rel="stylesheet" href="~/css/common.css"/>
 <ul class="navbar-nav">
@@ -12,15 +13,16 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link profile-nav" asp-area="Identity" asp-page="/Account/Profile/Index" asp title="Profile">
+            <a class="nav-link profile-nav" asp-area="Identity"
+               asp-page="/Account/Profile/Index" asp title="Profile">
                 <img src="~/user_profile_light.svg" alt="Profile"/>
             </a>
-        </li>
+        </li>@*
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button type="submit" class="nav-link btn btn-link text-light">Logout</button>
             </form>
-        </li>
+        </li>*@
     }
     else
     {
