--- a/wwwroot/css/areas/identity/account/profile/edit.css
+++ b/wwwroot/css/areas/identity/account/profile/edit.css
@@ -1,3 +1,18 @@
-.save button {
-    
+.body {
+    max-width: 1500px;
+}
+
+.button-container {
+    display: inline-block;
+}
+
+.cancel {
+    margin-left: 2rem;
+    color: var(--text-muted);
+    background-color: transparent;
+    border-color: var(--text-muted);
+}
+
+.cancel:hover {
+    background-color: var(--text-muted);
 }
