--- a/wwwroot/css/areas/project/list.css
+++ b/wwwroot/css/areas/project/list.css
@@ -34,6 +34,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-bottom: 10px;
     transition: transform 0.2s ease;
 }
 
