--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,10 +13,10 @@
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
 <header data-aos="fade-down">
-    <h1>🚀 Найди свою идеальную работу с Aeon</h1>
-    <p>Современный сервис для поиска вакансий, который говорит на языке твоей карьеры.</p>
+    <h1>🚀 Найди свою идеальную команду с Aeon</h1>
+    <p>Современный сервис для поиска проектов, который говорит на языке твоей карьеры.</p>
     <div class="cta">
-        <a asp-page="/Jobs/Index">Найти вакансию</a>
+        <a asp-page="/Jobs/Index">Найти проект</a>
     </div>
 </header>
 
@@ -30,8 +30,8 @@
         </div>
         <div class="card" data-aos="zoom-in" data-aos-delay="100">
             <i class="fa-solid fa-globe"></i>
-            <h3>Работа по всему миру</h3>
-            <p>Удалёнка или офис — выбирай то, что подходит именно тебе.</p>
+            <h3>Интересные проекты со всего мира</h3>
+            <p>Маленький и простой или большой и интересный проект — выбирай то, что подходит именно тебе.</p>
         </div>
         <div class="card" data-aos="zoom-in" data-aos-delay="200">
             <i class="fa-solid fa-user-shield"></i>
@@ -45,13 +45,15 @@
     <h2 style="text-align:center;">💼 Категории</h2>
     <div class="features">
         <div class="card"><i class="fa-solid fa-code"></i>
+            <h3>Backend</h3>
             <h3>Разработка</h3></div>
         <div class="card"><i class="fa-solid fa-pen-nib"></i>
             <h3>Дизайн</h3></div>
         <div class="card"><i class="fa-solid fa-database"></i>
-            <h3>Аналитика</h3></div>
+            <h3>Frontend</h3>
+            <h3>Разработка</h3></div>
         <div class="card"><i class="fa-solid fa-bullhorn"></i>
-            <h3>Маркетинг</h3></div>
+            <h3>3D моделирование</h3></div>
     </div>
 </section>
 
