--- a/Areas/Identity/Pages/Account/Profile/Edit.cshtml
+++ b/Areas/Identity/Pages/Account/Profile/Edit.cshtml
@@ -2,9 +2,7 @@
 @model Aeon_Web.Areas.Identity.Pages.Account.Profile.EditModel
 
 @{
-    var isEdit = Model.IsEdit;
-
-    ViewData["Title"] = isEdit ? "Редактирование резюме" : "Создание резюме";
+    ViewData["Title"] = Model.Input.IsEdit ? "Редактирование резюме" : "Создание резюме";
 }
 
 <link rel="stylesheet" href="~/css/areas/identity/account/profile/edit.css"/>
@@ -14,40 +12,37 @@
     <partial name="_StatusMessage" for="StatusMessage"/>
     <h2>Edit Resume</h2>
 
-    <form method="post">
+    <form method="post" onsubmit="return @Model.IsHaveVisibleVacancy ? confirm('Ваш проект будет снят с публикации') : null">
+        <input type="hidden" asp-for="Input.ResumeId" />
+        <input type="hidden" asp-for="Input.IsEdit" />
         <div>
-            <label asp-for="Resume.FullName">Полное имя</label>
-            <input asp-for="Resume.FullName" class="form-control"/>
+            <label asp-for="Input.Title">Желаемая роль</label>
+            <input asp-for="Input.Title" class="form-control"/>
         </div>
 
         <div>
-            <label asp-for="Resume.Title">Заголовок</label>
-            <input asp-for="Resume.Title" class="form-control"/>
-        </div>
-
-        <div>
-            <label asp-for="Resume.Summary"></label>
-            <textarea asp-for="Resume.Summary" class="form-control"></textarea>
+            <label asp-for="Input.Summary">О себе</label>
+            <textarea asp-for="Input.Summary" class="form-control"></textarea>
         </div>
 
         <h3>Контактная информация</h3>
         <div>
-            <label asp-for="Resume.Contact.Email">Email</label>
-            <input asp-for="Resume.Contact.Email" type="email" class="form-control"/>
+            <label asp-for="Input.Email">Email</label>
+            <input asp-for="Input.Email" type="email" class="form-control"/>
         </div>
         <div>
-            <label asp-for="Resume.Contact.Phone">Телефон</label>
-            <input asp-for="Resume.Contact.Phone" type="number" class="form-control"/>
+            <label asp-for="Input.Phone">Телефон</label>
+            <input asp-for="Input.Phone" type="number" class="form-control"/>
         </div>
         <div>
-            <label asp-for="Resume.Contact.Website">Сайт</label>
-            <input asp-for="Resume.Contact.Website" class="form-control"/>
+            <label asp-for="Input.Website">Сайт</label>
+            <input asp-for="Input.Website" class="form-control"/>
         </div>
 
         <div class="mt-3">
-            <h5><label asp-for="Skills">Навыки</label></h5>
+            <h5><label asp-for="Input.SkillsRaw">Навыки</label></h5>
             <h6>(через запятую)</h6>
-            <input asp-for="Skills" class="form-control mb-1"/>
+            <input asp-for="Input.SkillsRaw" class="form-control mb-1"/>
         </div>
 
         <div class="button-container">
@@ -56,7 +51,7 @@
         </div>
     </form>
 
-    @if (Model.IsEdit)
+    @if (Model.Input.IsEdit)
     {
         <form method="post" asp-page-handler="Delete"
               onsubmit="return confirm('Вы уверены, что хотите удалить резюме?');"
