--- a/Areas/Identity/Pages/Account/Profile/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Profile/Index.cshtml
@@ -24,7 +24,8 @@
         else
         {
             <li class="nav-item">
-                <a class="nav-link active" asp-area="Identity" asp-route-id="@Model.Resume.Id" asp-page="/Account/Profile/Edit">Редактировать</a>
+                <a class="nav-link active" asp-area="Identity" asp-route-resumeId="@Model.Resume.Id"
+                   asp-page="/Account/Profile/Edit">Редактировать</a>
             </li>
         }
         <li class="nav-item">
@@ -44,19 +45,19 @@
                 </td>
                 <td class="w-50">
                     <div class="circle-base proj-circle ms-3">
-                        <a class="circle-text proj-circle-text m-auto" asp-area="Identity" asp-page="/Account/Profile/Project/Index">
+                        <a class="circle-text proj-circle-text m-auto" asp-area="Identity"
+                           asp-page="/Account/Profile/Project/Index">
                             PROJECTS
                         </a>
                     </div>
                 </td>
-            </table>   
+            </table>
         }
         else
         {
             <td class="w-50">
                 <div class="desc me-5 mb-4">
-                    <div class="fw-bold">Hello!</div>
-                    <p>@Model.Resume.Title</p>
+                    <div class="fw-bold">@Model.Resume.Title</div>
                     <p>@Model.Resume.Summary</p>
                 </div>
                 <table class="center-block mt-5">
@@ -69,12 +70,13 @@
                     </td>
                     <td class="w-50">
                         <div class="circle-base proj-circle ms-3">
-                            <a class="circle-text proj-circle-text m-auto">
+                            <a class="circle-text proj-circle-text m-auto" asp-area="Identity"
+                               asp-page="/Account/Profile/Project/Index">
                                 PROJECTS
                             </a>
                         </div>
                     </td>
-                </table>    
+                </table>
             </td>
             <td class="w-50">
                 <div class="details-container center-block ms-5">
@@ -83,10 +85,6 @@
                         <div class="mt-2">
                             <div class="light-text fw-bold">Роль</div>
                             <div class="light-text">@Model.Resume.Title</div>
-                        </div>
-                        <div class="mt-2">
-                            <div class="light-text fw-bold">Имя</div>
-                            <div class="light-text">@Model.Resume.FullName</div>
                         </div>
                         <p class="light-text fw-bold mt-3">Contacts:</p>
                         <div class="mt-3">
@@ -101,13 +99,16 @@
                             <div class="light-text fw-bold">Website</div>
                             <div class="light-text">@Model.Resume.Contact.Website</div>
                         </div>
-                        <div class="mt-3">
-                            <div class="light-text fw-bold">Skills</div>
-                            @foreach (var skill in Model.Skills.Take(5))
-                            {
-                                <span class="skill">@skill</span>
-                            }
-                        </div>
+                        @if (Model.Skills.Any())
+                        {
+                            <div class="mt-3">
+                                <div class="light-text fw-bold">Skills</div>
+                                @foreach (var skill in Model.Skills.Take(5))
+                                {
+                                    <span class="skill">@skill.Name</span>
+                                }
+                            </div>
+                        }
                     </div>
                 </div>
             </td>
