--- a/Areas/Project/Pages/Jobs/Details.cshtml
+++ b/Areas/Project/Pages/Jobs/Details.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Aeon_Web.Areas.Project.Pages.Jobs.Details
+@model Aeon_Web.Areas.Project.Pages.Jobs.DetailsModel
 
 @{
     ViewData["Title"] = "Job Details";
