--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
             {
                 <a asp-area="Identity" asp-page="/Account/Profile/Edit">✏️ Редактировать резюме</a>
             }
-            <a asp-area="Project" asp-page="/Like/Index">❤️ Мои лайки</a>
+            <a asp-area="Project" asp-page="/Likes/Index">❤️ Мои лайки</a>
         </div>
     </header>
 
